--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Activity.RegisterActivity"
-            android:exported="false" />
+        <activity android:name=".Activity.RegisterActivity"/>
         <activity
             android:name=".Activity.LoginActivity"
             android:exported="false" />
