--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id("androidx.navigation.safeargs")
 }
 
 android {
@@ -42,4 +43,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //navigation component
+    implementation "androidx.navigation:navigation-fragment:2.5.2"
+    implementation "androidx.navigation:navigation-ui:2.5.2"
 }
