--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     //navigation component
     implementation "androidx.navigation:navigation-fragment:2.5.2"
     implementation "androidx.navigation:navigation-ui:2.5.2"
+
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 }
