--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
+    //radius button
+    implementation 'com.google.android.material:material:1.4.0'
 }
