--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,16 +32,18 @@
         <activity
             android:name=".MainActivity2"
             android:exported="true"
-            android:label="@string/title_activity_main2"></activity>
-        <activity android:name=".Activity.ForgotPassActivity" />
-        <activity
-            android:name=".Activity.HelloScreenActivity"
-            android:exported="true">
+            android:label="@string/title_activity_main2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Activity.ForgotPassActivity" />
+        <activity
+            android:name=".Activity.HelloScreenActivity"
+            android:exported="true">
+
         </activity>
         <activity android:name=".Activity.RegisterActivity" />
         <activity android:name=".Activity.LoginActivity" />
