--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,10 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
     //google
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    //retrofit
+    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //volley
+    implementation 'com.android.volley:volley:1.2.1'
 }
