--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.DeliciousRice"
         tools:targetApi="31">
         <activity
-            android:name=".EditAddress"
+            android:name=".ui.account.Activity.EditAddressActivity"
             android:exported="false" />
         <activity
             android:name=".ui.account.Activity.ReceiptActivity"
@@ -87,7 +87,9 @@
         <activity
             android:name=".MainActivity2"
             android:exported="true"
-            android:label="@string/title_activity_main2" />
+            android:label="@string/title_activity_main2" >
+
+        </activity>
         <activity android:name=".Activity.ForgotPassActivity" />
         <activity
             android:name=".Activity.HelloScreenActivity"
@@ -108,6 +110,9 @@
         <meta-data
             android:name="com.facebook.sdk.ClientToken"
             android:value="@string/facebook_client_token" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <activity
             android:name="com.facebook.FacebookActivity"
