--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
+    // delete
+    implementation group: 'com.apachat', name: 'swipereveallayout-android', version: '1.1.2'
+
     //radius button
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     //facebook
