--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.example.deliciousrice">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission
         android:name="com.google.android.gms.permission.AD_ID"
         tools:node="remove" />
@@ -18,6 +20,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DeliciousRice"
         tools:targetApi="31">
+        <activity
+            android:name=".ConfirmOTPActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SendOtpActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.account.Activity.EditAddressActivity"
             android:exported="false" />
@@ -87,9 +95,7 @@
         <activity
             android:name=".MainActivity2"
             android:exported="true"
-            android:label="@string/title_activity_main2" >
-
-        </activity>
+            android:label="@string/title_activity_main2" />
         <activity android:name=".Activity.ForgotPassActivity" />
         <activity
             android:name=".Activity.HelloScreenActivity"
