--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
     <uses-permission
         android:name="com.google.android.gms.permission.AD_ID"
         tools:node="remove" />
@@ -21,10 +23,7 @@
         android:theme="@style/Theme.DeliciousRice"
         tools:targetApi="31">
         <activity
-            android:name=".ConfirmOTPActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SendOtpActivity"
+            android:name=".Activity.ConfirmOTPActivity"
             android:exported="false" />
         <activity
             android:name=".ui.account.Activity.EditAddressActivity"
