--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,11 @@
         android:theme="@style/Theme.DeliciousRice"
         tools:targetApi="31">
         <activity
-            android:name=".ConfirmOTPActivity"
+            android:name=".Activity.ConfirmOTPActivity"
             android:exported="false" />
-        <activity
-            android:name=".SendOtpActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".SendOtpActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".ui.account.Activity.EditAddressActivity"
             android:exported="false" />
