--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
     //radius button
     implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation 'com.makeramen:roundedimageview:2.3.0'
     //facebook
     implementation 'com.facebook.android:facebook-login:5.11.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.5.0'
