--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,9 +75,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     //volley
     implementation 'com.android.volley:volley:1.2.1'
-    //glide
+    //glide and picture
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'net.gotev:uploadservice:2.1'
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
     //mail
     implementation 'com.sun.mail:android-mail:1.6.0'
