--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation group: 'com.apachat', name: 'swipereveallayout-android', version: '1.1.2'
 
     //radius button
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     //facebook
     implementation 'com.facebook.android:facebook-login:5.11.0'
@@ -76,7 +76,7 @@ dependencies {
     //volley
     implementation 'com.android.volley:volley:1.2.1'
     //glide and picture
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'net.gotev:uploadservice:2.1'
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
