--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+
     <uses-permission
         android:name="com.google.android.gms.permission.AD_ID"
         tools:node="remove" />
@@ -33,9 +34,10 @@
             android:exported="false"></activity>
         <activity
             android:name=".Activity.ConfirmOTPActivity"
-            android:exported="false" /> <!-- <activity -->
-        <!-- android:name=".SendOtpActivity" -->
-        <!-- android:exported="false" /> -->
+            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".SendOtpActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".ui.account.Activity.EditAddressActivity"
             android:exported="false" />
@@ -119,6 +121,9 @@
         <meta-data
             android:name="com.facebook.sdk.ClientToken"
             android:value="@string/facebook_client_token" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <activity
             android:name="com.facebook.FacebookActivity"
