--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
         android:theme="@style/Theme.DeliciousRice"
         tools:targetApi="31">
         <activity
+            android:name=".AddAddressActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.shop.Activity.InvoicedetailsActivity"
             android:exported="false">
             <meta-data
@@ -30,7 +37,7 @@
         </activity>
         <activity
             android:name=".ui.shop.Activity.DetailActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".Activity.ConfirmOTPActivity"
             android:exported="false" /> <!-- <activity -->
