--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         android:theme="@style/Theme.DeliciousRice"
         tools:targetApi="31">
         <activity
+            android:name=".ui.account.Activity.ChangePasActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.shop.Activity.PayActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.account.Activity.AddAddressActivity"
             android:exported="false">
             <meta-data
@@ -125,7 +131,7 @@
         </activity>
         <activity android:name=".Activity.RegisterActivity" />
         <activity android:name=".Activity.LoginActivity" />
-        <activity android:name=".MainActivity" />
+
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
