--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     //glide and picture
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'net.gotev:uploadservice:2.1'
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
