ViewAll and Invoicedetail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,13 @@
         android:theme="@style/Theme.DeliciousRice"
         tools:targetApi="31">
         <activity
-            android:name=".ViewAllActivity"
+            android:name=".ui.shop.Activity.ViewAllHotActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.shop.Activity.ViewAllNewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.shop.Activity.ViewAllCboActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
