--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,18 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DeliciousRice"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".MainActivityZalopay"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ui.shop.Activity.ViewAllHotActivity"
             android:exported="false" />
@@ -36,9 +43,11 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
+
         <service
             android:name=".Notification.FirebaseMessagingService"
             android:exported="false">
@@ -46,6 +55,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <activity
             android:name=".ui.shop.Activity.PayActivity"
             android:exported="false" />
@@ -81,8 +91,6 @@
         <activity
             android:name=".ui.account.Activity.EditAddressActivity"
             android:exported="false" />
-
-
         <activity
             android:name=".ui.account.Activity.AddressActivity"
             android:exported="false">
@@ -90,7 +98,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".Activity.LoginFaGoActivity"
             android:exported="false">
