--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.4.1'
     implementation 'androidx.navigation:navigation-runtime:2.5.2'
     implementation 'com.google.firebase:firebase-messaging:17.3.1'
-    implementation fileTree(dir: 'C:\\Users\\pc\\Downloads\\Zalo', include: ['*.aar', '*.jar'], exclude: [])
-
-
+    implementation files('C:\\Users\\thinh\\OneDrive\\Documents\\GitHub\\DeliciousRice\\app\\src\\main\\libs\\zpdk-release-v3.1.aar')
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -60,10 +59,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
-
-    // delete
     implementation group: 'com.apachat', name: 'swipereveallayout-android', version: '1.1.2'
-
     //radius button
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
