--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.4.1'
     implementation 'androidx.navigation:navigation-runtime:2.5.2'
     implementation 'com.google.firebase:firebase-messaging:17.3.1'
-    implementation files('C:\\Users\\thinh\\OneDrive\\Documents\\GitHub\\DeliciousRice\\app\\src\\main\\libs\\zpdk-release-v3.1.aar')
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation fileTree(dir: 'D:\\zalopay', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
