--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.3.1'
 
     implementation 'com.google.firebase:firebase-auth:21.1.0'
-    implementation fileTree(dir: 'D:\\zalopay', include: ['*.aar', '*.jar'], exclude: [])
-    implementation fileTree(dir: 'C:\\Users\\pc\\Downloads\\Zalo', include: ['*.aar', '*.jar'], exclude: [])
-
+    implementation fileTree(dir: 'C:\\Users\\thinh\\OneDrive\\Documents\\GitHub\\DeliciousRice\\app\\src\\main\\libs', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
