--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,15 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.4.1'
     implementation 'androidx.navigation:navigation-runtime:2.5.2'
     implementation 'com.google.firebase:firebase-messaging:17.3.1'
-
+    //noinspection GradleCompatible
+    implementation "com.android.support:support-compat:27.1.1"
     implementation 'com.google.firebase:firebase-auth:21.1.0'
 
 
 
     implementation fileTree(dir: 'D:\\ZaloPay', include: ['*.aar', '*.jar'], exclude: [])
     implementation fileTree(dir: 'C:\\Users\\Admin\\AndroidStudioProjects\\Zalo Pay', include: ['*.aar', '*.jar'], exclude: [])
+    implementation fileTree(dir: 'C:\\Users\\thinh\\OneDrive\\Documents\\GitHub\\DeliciousRice\\app\\src\\main\\libs', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
